# MCP_Server

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
client/: ollama_mcp_client.py
config/: server.json
knowledge/: http_client.cpp  http_server.cpp  json.cpp  spdlog.cpp
src/config/: config.cpp  config.h
src/json_rpc/: http_jsonrpc.cpp  http_jsonrpc.h  jsonrpc.h  jsonrpc_serialization.cpp  jsonrpc_serialization.h  stdio_jsonrpc.cpp
src/logger/: logger.cpp  logger.h
src/mcp/: mcp_server.cpp  mcp_server.h  types.cpp  types.h
tests/: config_load_from_file_test.cpp  logger_initialization_test.cpp  logger_test.cpp
